--- a/zdorovie/produkty.html
+++ b/zdorovie/produkty.html
@@ -30,16 +30,16 @@
     <li><a href="http://www.optimumnutrition.ru/"><img src="http://www.optimumnutrition.ru/local/templates/itlooks/assets/img/static/white-logo.svg"> Optimum Nutrition</a></li>
 </div>
 <div>
-<a href="https://youtu.be/B1w4pgzHoZs">1</a><br>
-<a href="https://youtu.be/Y5SswVr6mdw">2</a><br>
-<a href="https://youtu.be/JizWO3RN2w8">3</a><br>
-<a href="https://youtu.be/L9cXYlhy9rw">4</a><br>
-<a href="https://youtu.be/nzvgxcUWWR8">5</a><br>
-<a href="https://youtu.be/15B_XZhjvHA">6</a><br>
-<a href="https://youtu.be/zqiv2rqfStg">7</a><br>
-<a href="https://youtu.be/8FC-UkQowP0">8</a><br>
-<a href="https://youtu.be/KvP54gA-0c8">9</a><br>
-<a href="https://youtu.be/G8Gs4tXAR40">0</a><br>
+<a href="https://youtu.be/B1w4pgzHoZs">ТАЙНОЕ ПРАВИЛЬНОЕ ПИТАНИЕ ДЕН4ИКА. Максимум с Минимальными Усилиями.</a><br>
+<a href="https://youtu.be/Y5SswVr6mdw">ПОЧЕМУ ЛЮДИ ТАК МЕРЗКО ПИТАЮТСЯ</a><br>
+<a href="https://youtu.be/JizWO3RN2w8">ГЛИКЕМИЧЕСКИЙ ИНДЕКС</a><br>
+<a href="https://youtu.be/L9cXYlhy9rw">Вредны ли ЯЙЦА? (Белок VS Холестерин)</a><br>
+<a href="https://youtu.be/nzvgxcUWWR8">Обзор: ТВОРОГ</a><br>
+<a href="https://youtu.be/15B_XZhjvHA">КОЭНЗИМ Q10</a><br>
+<a href="https://youtu.be/zqiv2rqfStg">ФАСТФУД = ЧУЖОЙ ЖИР!</a><br>
+<a href="https://youtu.be/8FC-UkQowP0">ПРАВИЛЬНАЯ ДИЕТА Хомо Сапиенса!</a><br>
+<a href="https://youtu.be/KvP54gA-0c8">БУЧ ДИЕТА</a><br>
+<a href="https://youtu.be/G8Gs4tXAR40">КЕТО ДИЕТА</a><br>
 </div>
 <div>
 <img src="http://leonardasf1.narod.ru/images/PRD_CEL_NTR_VPR_HC_group.jpg">
