--- a/Skateboard/index.html
+++ b/Skateboard/index.html
@@ -7,24 +7,19 @@
 <META NAME="KEYWORDS" CONTENT="Лонгборд , карвинг , Longboard , пампинг , круизинг , Skateboard">
 <META NAME="DESCRIPTION" CONTENT="Longboard">
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
+  <link rel="stylesheet" href="../CSS/style.css">
 
   <link rel="stylesheet" href="../CSS/lb_style.css">
   <script src="../JS/lb.js" defer></script>
 
+  <script src="../JS/main.js"></script>
 </head>
 
 <body>
 
 <header>
-  <div id="headerMenu">
-    <div>
-      <img src="" alt="">
-      <span>Skateboard</span>
-    </div>
-  </div>
+  <div id="headerMenu"></div>
 </header>
-    <script src="../JS/main.js" async></script>
 
 <content class="flex import_Img">
 
