--- a/programming/shablon.html
+++ b/programming/shablon.html
@@ -6,7 +6,7 @@
 	<title>Title</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js" defer></script>
+  <script src="../JS/main.js"></script>
 
 <!--   <link rel="stylesheet" href="../CSS/lb_style.css">
   <script src="../JS/lb.js" defer></script> -->
@@ -15,12 +15,7 @@
 <body>
 
 <header>
-  <div id="headerMenu">
-    <div>
-      <img src="" alt="">
-      <span>Page name</span>
-    </div>
-  </div>
+  <div id="headerMenu"></div>
 </header>
 
 <content class="flex">
