--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonardasf1.github.io</title>
   <link rel="SHORTCUT ICON" href="icons/favicon.ico">
-  <link rel="stylesheet" href="CSS/leonardasf1.css">
+  <link rel="stylesheet" href="CSS/style.css">
 
-  <script src="JS/main.js" async></script>
+  <script src="JS/main.js"></script>
 </head>
 
 <body>
@@ -20,14 +20,14 @@
   </div>
 </header>
 <content>
-<div id="links"></div>
-<!--    <div style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
-      <img src="F1_Challenge/1983/1983.jpg">
-      <img src="Alpinism/DSC03909.jpg">
-      <img src="sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
-      <img src="flamenco/flam.jpg"> 
-      <img src="13dospeh/med.jpg"> 
-    </div>  -->
+  <div id="links"></div>
+  <div class="import_Img" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
+    <img src="F1_Challenge/1983/1983.jpg">
+    <img src="Alpinism/DSC03909.jpg">
+    <img src="sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
+    <img src="flamenco/flam.jpg">
+    <img src="13dospeh/med.jpg">
+  </div>
 </content>
 
 <footer></footer>
