--- a/index.html
+++ b/index.html
@@ -13,20 +13,16 @@
 <body>
 
 <header>
-  <div id="headerMenu">
-    <div>
-      <span class="prelogo">Leonardasf1.github.io</span>
-    </div>
-  </div>
+  <div id="headerMenu"></div>
 </header>
+
 <content>
-  <div id="links"></div>
-  <div class="import_Img" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
-    <img src="F1_Challenge/1983/1983.jpg">
-    <img src="Alpinism/DSC03909.jpg">
-    <img src="sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
-    <img src="flamenco/flam.jpg">
-    <img src="13dospeh/med.jpg">
+  <div class="../import_Img" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
+    <img src="../F1_Challenge/1983/1983.jpg">
+    <img src="../Alpinism/DSC03909.jpg">
+    <img src="../sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
+    <img src="../flamenco/flam.jpg">
+    <img src="../13dospeh/med.jpg">
   </div>
 </content>
 
