--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 
 <content>
-  <div class="../import_Img" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
+  <div class="import_Img" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
     <img src="../F1_Challenge/1983/1983.jpg">
     <img src="../Alpinism/DSC03909.jpg">
     <img src="../sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
