--- a/JS/header.html
+++ b/JS/header.html
@@ -19,4 +19,4 @@
 <a href="../nu/">nu</a>
     </div>
 </div> -->
-<a><img src="../icons/favicon.ico"></a>
+<a href="../"><img src="../icons/favicon.ico"></a>
