--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leonardasf1.github.io</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leonardasf1.github.io</title>
   <link rel="SHORTCUT ICON" href="icons/favicon.ico">
   <link rel="stylesheet" href="CSS/style.css">
-
   <script src="JS/main.js"></script>
 </head>
 
@@ -17,15 +16,13 @@
 </header>
 
 <content>
-  <div class="import_Img" style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
-    <img src="../F1_Challenge/1983/1983.jpg">
-    <img src="../Alpinism/DSC03909.jpg">
-    <img src="../sailing/sailboats/cutter93-37/Moonbeam-3/m6.jpg">
-    <img src="../flamenco/flam.jpg">
-    <img src="../13dospeh/med.jpg">
-  </div>
+  <style>
+    #headerMenu {
+      height: 100vh;
+      justify-content: space-around;
+    }
+  </style>
 </content>
-
-<footer></footer>
+<!-- <footer></footer> -->
 </body>
 </html>
