lazyload & another optim-ns

--- a/JS/header.html
+++ b/JS/header.html
@@ -19,4 +19,4 @@
 <a href="../nu/">nu</a>
     </div>
 </div> -->
-<a href="../"><img src="../icons/favicon.ico"></a>
+<a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a>
