--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="SHORTCUT ICON" href="icons/favicon.ico">
   <link rel="stylesheet" href="CSS/style.css">
   <script src="JS/main.js"></script>
+  <script src="JS/lazysizes.min.js" async=""></script>
 </head>
 
 <body>
@@ -15,14 +16,14 @@
   <div id="headerMenu"></div>
 </header>
 
-<content>
+<main>
   <style>
     #headerMenu {
       height: 100vh;
       justify-content: space-around;
     }
   </style>
-</content>
+</main>
 <footer></footer>
 </body>
 </html>
