--- a/programming/golang.html
+++ b/programming/golang.html
@@ -20,6 +20,7 @@
     <a href="https://youtu.be/CX4GSErFenI">Как устроен garbage collector в Go 1.9 (2017)</a><br>
     <a href="https://youtu.be/HtQLBdD82vE">Кодогенерация в Go (2017)</a><br>
     Kubernetes<br>
+    <a href="https://www.vugu.org/">Vugu: A modern UI library for Go+WebAssembly</a>
 	</div>
 
 <div>
