--- a/programming/html.html
+++ b/programming/html.html
@@ -113,6 +113,8 @@ value=""</pre>
 </form>
 </div></details>
 
+<details>
+  <summary>a</summary>
   <a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html" download="">a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html"</a><br>
   <a href="#" target="_self">target="_self"</a><br>
   <a href="#" target="_top">target="_top"</a> <br>
@@ -127,6 +129,12 @@ value=""</pre>
 
    <a href="#c6">< a href="#c6"> /</a>
   <a id="c6">< a id="c6"> /</a>
+</details>
+
+<details>
+  <summary>noscript</summary>
+  < noscript>< /noscript>
+</details>
 </div>
 
 </div>
