--- a/programming/shablon.html
+++ b/programming/shablon.html
@@ -18,14 +18,14 @@
   <div id="headerMenu"></div>
 </header>
 
-<content class="flex">
+<main class="flex">
 
 <nav></nav>
 
 <div id="links"></div>
 
 
-</content>
+</main>
 
 <footer></footer>
 </body>
