--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -1,29 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Webpack</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/style.css">
-  <script src="../JS/main.js" defer></script>
-  
-    <link rel="stylesheet" href="../CSS/highlight.css">
-    <script src="../JS/highlight.pack.js"></script>
-</head>
+<div id="pageTitle"></div>
 
-<body>
-
-<header>
-  <div id="headerMenu">
-    <div>
-      <img src="" alt="">
-      <span>Webpack</span>
-    </div>
-  </div>
-</header>
-<content>
 <div class="flex">
+
 <div id="links">
   <a href="https://webpack.js.org"><img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt=""></a>
   <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Антон Кастрицкий</a> 
@@ -97,9 +75,5 @@ module.exports = {
 
 </code></pre>
 </article>
-</div>
-</content>
-<footer></footer>
 
-</body>
-</html>
+</div>
