--- a/programming/php.html
+++ b/programming/php.html
@@ -1,45 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>php</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
+<div id="pageTitle">php</div>
 
-    <link rel="stylesheet" href="../CSS/highlight.css">
-    <script src="../JS/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+<div class="flex">
 
-</head>
-
-<body>
-
-<header>
-  <div id="headerMenu">
-    <div>
-      <img src="https://www.php.net/images/logos/php-med-trans.png" alt="">
-			<span><svg height="32px" xmlns="http://www.w3.org/2000/svg" viewBox="0 -1 100 50">
-  <path d="m7.579 10.123 14.204 0c4.169 0.035 7.19 1.237 9.063 3.604 1.873 2.367 2.491 5.6 1.855 9.699-0.247 1.873-0.795 3.71-1.643 5.512-0.813 1.802-1.943 3.427-3.392 4.876-1.767 1.837-3.657 3.003-5.671 3.498-2.014 0.495-4.099 0.742-6.254 0.742l-6.36 0-2.014 10.07-7.367 0 7.579-38.001 0 0m6.201 6.042-3.18 15.9c0.212 0.035 0.424 0.053 0.636 0.053 0.247 0 0.495 0 0.742 0 3.392 0.035 6.219-0.3 8.48-1.007 2.261-0.742 3.781-3.321 4.558-7.738 0.636-3.71 0-5.848-1.908-6.413-1.873-0.565-4.222-0.83-7.049-0.795-0.424 0.035-0.83 0.053-1.219 0.053-0.353 0-0.724 0-1.113 0l0.053-0.053"/>
-  <path d="m41.093 0 7.314 0-2.067 10.123 6.572 0c3.604 0.071 6.289 0.813 8.056 2.226 1.802 1.413 2.332 4.099 1.59 8.056l-3.551 17.649-7.42 0 3.392-16.854c0.353-1.767 0.247-3.021-0.318-3.763-0.565-0.742-1.784-1.113-3.657-1.113l-5.883-0.053-4.346 21.783-7.314 0 7.632-38.054 0 0"/>
-  <path d="m70.412 10.123 14.204 0c4.169 0.035 7.19 1.237 9.063 3.604 1.873 2.367 2.491 5.6 1.855 9.699-0.247 1.873-0.795 3.71-1.643 5.512-0.813 1.802-1.943 3.427-3.392 4.876-1.767 1.837-3.657 3.003-5.671 3.498-2.014 0.495-4.099 0.742-6.254 0.742l-6.36 0-2.014 10.07-7.367 0 7.579-38.001 0 0m6.201 6.042-3.18 15.9c0.212 0.035 0.424 0.053 0.636 0.053 0.247 0 0.495 0 0.742 0 3.392 0.035 6.219-0.3 8.48-1.007 2.261-0.742 3.781-3.321 4.558-7.738 0.636-3.71 0-5.848-1.908-6.413-1.873-0.565-4.222-0.83-7.049-0.795-0.424 0.035-0.83 0.053-1.219 0.053-0.353 0-0.724 0-1.113 0l0.053-0.053"/>
-</svg></span>
-		</div>
-    </div>
-</header>
-
-    <script src="../JS/leoscript.js" async></script>
-    
 <div id="links">
-  <a href="https://www.php.net/manual/ru/">php.net</a>
-  <a href="http://www.php.su/learnphp/">php.su/learnphp</a>
-</div>
-
-<nav>
-  
-</nav>
-
-<article>
+  <a href="https://www.php.net/manual/ru/">php.net</a><br>
+  <a href="http://www.php.su/learnphp/">php.su/learnphp</a><br>
   <ul>
     <li><a href="https://itvdn.com/ru/specialities/php-developer">ITVDN - PHP Developer</a></li>
     <li><a href="https://itvdn.com/ru/video/php_start">ITVDN - php start</a></li>
@@ -68,12 +33,15 @@
     <li><a href="https://youtu.be/sNQJfKYmRdo"> PHP Свой Фреймворк #1 - Введение, Структура</a></li>
     <li><a href="https://vk.com/doc74080069_484590435?hash=08493f67d4fccc62d4&dl=ab99cd2c3ee33df970">PHP 7 Дмитрий Котеров, Игорь Симдянов. Наиболее полное руководство (3-е издание) - 2016.pdf
   </a></li>
-    <li>Laravel</li>
-    <li>Simfony</li>
   </ul>
+</div>
+
+<article>
 <div>
   install: php, web-server(Apache) , database(MySQL) <br>
-  launch: web-server(Apache)
+  launch: web-server(Apache) <br>
+    <li>Laravel</li>
+    <li>Simfony</li>
   <pre><code>
 < ?php 
     echo 'html-cod';  // может принимать список аргументов
@@ -136,8 +104,4 @@ integer, float, string, array, object, bolean;
 </div>
 
 </article>
-
-<footer></footer>
-
-</body>
-</html>
+</div>
