--- a/programming/react.html
+++ b/programming/react.html
@@ -1,78 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ReactJS</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
+<div id="pageTitle">ReactJS</div>
 
-<style>
-
-	article {padding: 3%}
-
-	.prelogo {color: #61dafb}
-
-</style>
-</head>
-
-<body>
-
-<header>
-  <div id="headerMenu">
-    <div>
-			<img src="../icons/react.svg">
-            <span class="prelogo">React</span>
-			
-		</div>
-    </div>
-  </header>
-
-<script src="../JS/leoscript.js" defer></script>
 <div class="flex">
+
     <div id="links">
         <a href="https://reactjs.org/"><img src="../icons/react.svg" alt="reactjs.org"></a>
         <a href="https://github.com/facebook/react"><img src="https://github.githubassets.com/favicon.ico" alt="GitHub"></a>
         <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js"></a>
     </div>
-</div>
+    <div>
+        <a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential</a>
+        <ul>
+            <li>Введение в React . <a href="https://youtu.be/gbTSl88k5pk"></a> <a href="primery/react1.html">result</a></li>
+            <li>Подробнее о компонентах</li>
+            <li>Окружение</li>
+            <li>Роутинг и ES2015</li>
+            <li>Архитектура Flux, взаимодействие с API</li>
+            <li>Написание полноценного SPA</li>
+            <li>Deploy</li>
+        </ul>
+        <a href="https://github.com/krambertech/react-essential-course">krambertech/react-essential-course</a>
+    </div>
+    <div>
+        <a href="https://itvdn.com/ru/video/react_adv">React Advanced</a>
+        <ul>
+            <li>Redux Introduction</li>
+            <li>Настройка окружения</li>
+            <li><a href="https://en.wikipedia.org/wiki/Redux_(JavaScript_library)">Redux</a></li>
+            <li>Оптимизация и производительность React приложений</li>
+            <li>Тестирование React и Redux</li>
+            <li>Изоморфные приложения на React и Server Side Rendering</li>
+        </ul>
+    </div>
+    <div>
+        <a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a><br>
+        <a href="https://youtu.be/1kopPz0Fhlk">Первое веб-приложение с React.JS (2019)</a><br>
+        <a href="https://www.youtube.com/watch?v=riRrKFkbS-g&list=PLVfMKQXDAhGVCB401FJhb4HC6tAMe5YdL"> Уроки React Js для новичков (Web Developer Blog.2017)</a><br>
+    </div>
 
-        <article style="display: flex; background-color: rgba(0,0,0,0.2)">
-        	<div>
-        		<a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential</a>
-        		<ul>
-        			<li>Введение в React . <a href="https://youtu.be/gbTSl88k5pk"></a> <a href="primery/react1.html">result</a></li>
-        			<li>Подробнее о компонентах</li>
-        			<li>Окружение</li>
-        			<li>Роутинг и ES2015</li>
-        			<li>Архитектура Flux, взаимодействие с API</li>
-        			<li>Написание полноценного SPA</li>
-        			<li>Deploy</li>
-        		</ul>
-        		<a href="https://github.com/krambertech/react-essential-course">krambertech/react-essential-course</a>
-        	</div>
-        	<div>
-        		<a href="https://itvdn.com/ru/video/react_adv">React Advanced</a>
-        		<ul>
-        			<li>Redux Introduction</li>
-        			<li>Настройка окружения</li>
-        			<li><a href="https://en.wikipedia.org/wiki/Redux_(JavaScript_library)">Redux</a></li>
-        			<li>Оптимизация и производительность React приложений</li>
-        			<li>Тестирование React и Redux</li>
-        			<li>Изоморфные приложения на React и Server Side Rendering</li>
-        		</ul>
-        	</div>
-        	<div>
-				<a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a><br>
-				<a href="https://youtu.be/1kopPz0Fhlk">Первое веб-приложение с React.JS (2019)</a><br>
-				<a href="https://www.youtube.com/watch?v=riRrKFkbS-g&list=PLVfMKQXDAhGVCB401FJhb4HC6tAMe5YdL"> Уроки React Js для новичков (Web Developer Blog.2017)</a><br>
-        	</div>
-        </article>
-        <article>
-        	<br>
-            плагин для sublimeText/packageControl/install/babel<br>
-            
-        </article>
-        <footer></footer>
-</body>
-</html>
+</div>
