--- a/programming/vue.html
+++ b/programming/vue.html
@@ -1,35 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Vue.js</title>
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
+<div id="pageTitle">Vue.js</div>
 
-    <link rel="stylesheet" href="../CSS/highlight.css">
-    <script src="../JS/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-<style>
-  .prelogo {color: #41b883}
-</style>
-</head>
-
-<body>
-
-<header>
-  <div id="headerMenu">
-    <div>
-      <img src="../icons/vue.svg">
-			<span class="prelogo">Vue.js</span>
-		</div>
-    </div>
-</header>
-
-    <script src="../JS/leoscript.js" async></script>
 <div class="flex">
+
   <div id="links">
-    <a href="https://vuejs.org"><img src="../icons/vue.svg"></a>
+    <a href="https://vuejs.org"><img src="../icons/vue.svg" alt="vuejs.org"></a>
     <a href="https://github.com/vuejs/vue"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
     <a href="https://nuxtjs.org/"><img src="https://nuxtjs.org/logos/nuxt.svg" alt="nuxt">nuxt</a>
     <a href="https://vuetifyjs.com/en/"><img src="https://vuetifyjs.com/favicon.ico" alt="vuetify"></a>
@@ -44,7 +18,6 @@
     <a href="https://youtu.be/xot0SjunN2U">Специфика рендеринга vue.js-приложений на сервере. 2019</a><br>
     <a href="https://youtu.be/Ynhk9GqSsZI">Nuxt.js from the Core. 2019</a><br>
   </div>
-</div>
 
 <article>
   <pre>
@@ -178,7 +151,4 @@ $refs.
   </div>
 </article>
 
-<footer></footer>
-
-</body>
-</html>
+</div>
